Allow creation of secrets needed for listing applications
- Which is a surprise but wygd?

--- a/charts/mccp/templates/rbac/clusters_service_secrets_role.yaml
+++ b/charts/mccp/templates/rbac/clusters_service_secrets_role.yaml
@@ -2,8 +2,10 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: clusters-service-viewer-role
+  name: clusters-service-secrets-role
 rules:
   - apiGroups: [""]
     resources: ["secrets"]
-    verbs: ["get", "watch", "list"]
+    # create to create deploy key secrets
+    # read to read capi secrets like kubeconfig
+    verbs: ["create", "get", "watch", "list"]
