--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,9 +20,13 @@ jobs:
     runs-on: ubuntu-latest    
     needs: build
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: Build Changelog
       id: github_release
-      uses: mikepenz/release-changelog-builder-action@v1
+      uses: mikepenz/release-changelog-builder-action@v2
       with:
         configuration: "${{ github.workspace }}/.github/workflows/changelog_configuration.json"
       env:
