--- a/cmd/event-writer/Dockerfile
+++ b/cmd/event-writer/Dockerfile
@@ -7,11 +7,9 @@ LABEL maintainer="Weaveworks <help@weave.works>" \
       org.opencontainers.image.created="${now}" \
       org.opencontainers.image.description="The Weave GitOps Enterprise Event Writer" \
       org.opencontainers.image.documentation="https://docs.gitops.weave.works/" \
-      org.opencontainers.image.licenses="MPL-2.0" \
       org.opencontainers.image.revision="${revision}" \
-      org.opencontainers.image.source="https://github.com/weaveworks/weave-gitops-enterprise" \
       org.opencontainers.image.title="weave-gitops-enterprise-event-writer" \
-      org.opencontainers.image.url="https://github.com/weaveworks/weave-gitops-enterprise" \
+      org.opencontainers.image.url="https://docs.gitops.weave.works/" \
       org.opencontainers.image.vendor="Weaveworks" \
       org.opencontainers.image.version="${version}"
 
