--- a/cmd/ui-server/Dockerfile
+++ b/cmd/ui-server/Dockerfile
@@ -16,8 +16,7 @@ LABEL maintainer="Weaveworks <help@weave.works>" \
       org.opencontainers.image.created="${now}" \
       org.opencontainers.image.description="The Weave GitOps Enterprise UI Server" \
       org.opencontainers.image.documentation="https://docs.gitops.weave.works/" \
-      org.opencontainers.image.licenses="MPL-2.0" \
-      org.opencontainers.image.url="https://github.com/weaveworks/weave-gitops-enterprise" \ 
+      org.opencontainers.image.url="https://docs.gitops.weave.works/" \ 
       org.opencontainers.image.version="${version}"
 
 
