--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -206,7 +206,7 @@ jobs:
         make ui-build-for-tests
         
         cd test/integration/test
-        go test -v -ginkgo.v -run TestMccpUI -ginkgo.skip=@integration -ginkgo.skip=@gce -ginkgo.skip=@eks --timeout=99999s     
+        go test -v -ginkgo.v -run TestMccpUI -ginkgo.skip=@integration -ginkgo.skip=@gce -ginkgo.skip=@eks -ginkgo.skip=@application -ginkgo.skip=@upgrade --timeout=99999s     
     - name: Store integration test results
       if: ${{ always() }}
       uses: actions/upload-artifact@v2
