--- a/cmd/clusters-service/Dockerfile
+++ b/cmd/clusters-service/Dockerfile
@@ -1,4 +1,17 @@
-from golang:1.17.1 as builder
+FROM golang:1.17.1 as builder
+
+ARG now
+ARG revision
+ARG version
+LABEL maintainer="Weaveworks <help@weave.works>" \
+      org.opencontainers.image.created="${now}" \
+      org.opencontainers.image.description="The Weave GitOps Enterprise Clusters Service" \
+      org.opencontainers.image.documentation="https://docs.gitops.weave.works/" \
+      org.opencontainers.image.revision="${revision}" \
+      org.opencontainers.image.title="weave-gitops-enterprise-clusters-service" \
+      org.opencontainers.image.url="https://docs.gitops.weave.works/" \
+      org.opencontainers.image.vendor="Weaveworks" \
+      org.opencontainers.image.version="${version}"
 
 ENV CS_PATH=cmd/clusters-service
 
