--- a/cmd/gitops-repo-broker/Dockerfile
+++ b/cmd/gitops-repo-broker/Dockerfile
@@ -1,5 +1,18 @@
 FROM docker.io/governmentpaas/git-ssh
 
+ARG now
+ARG revision
+ARG version
+LABEL maintainer="Weaveworks <help@weave.works>" \
+      org.opencontainers.image.created="${now}" \
+      org.opencontainers.image.description="The Weave GitOps Enterprise GitOps Repo Broker" \
+      org.opencontainers.image.documentation="https://docs.gitops.weave.works/" \
+      org.opencontainers.image.revision="${revision}" \
+      org.opencontainers.image.title="weave-gitops-enterprise-gitops-repo-broker" \
+      org.opencontainers.image.url="https://docs.gitops.weave.works/" \
+      org.opencontainers.image.vendor="Weaveworks" \
+      org.opencontainers.image.version="${version}"
+
 # Add git provider hostnames to known hosts file so we can use
 # StrickHostKeyChecking with git+ssh
 ADD ./known_hosts.sh /home/wkp/known_hosts.sh
