--- a/cmd/wkp-agent/Dockerfile
+++ b/cmd/wkp-agent/Dockerfile
@@ -1,5 +1,18 @@
 FROM docker.io/governmentpaas/git-ssh
 
+ARG now
+ARG revision
+ARG version
+LABEL maintainer="Weaveworks <help@weave.works>" \
+      org.opencontainers.image.created="${now}" \
+      org.opencontainers.image.description="The Weave GitOps Enterprise WKP Agent" \
+      org.opencontainers.image.documentation="https://docs.gitops.weave.works/" \
+      org.opencontainers.image.revision="${revision}" \
+      org.opencontainers.image.title="wkp-agent" \
+      org.opencontainers.image.url="https://docs.gitops.weave.works/" \
+      org.opencontainers.image.vendor="Weaveworks" \
+      org.opencontainers.image.version="${version}"
+
 COPY wkp-agent /
 
 ENTRYPOINT ["/wkp-agent"]
