--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -206,7 +206,7 @@ jobs:
         make ui-build-for-tests
         
         cd test/integration/test
-        go test -v -ginkgo.v -run TestMccpUI -ginkgo.skip=@integration -ginkgo.skip=@gce -ginkgo.skip=@eks --timeout=99999s     
+        go test -v -ginkgo.v -run TestMccpUI -ginkgo.skip=@integration -ginkgo.skip=@gce -ginkgo.skip=@eks -ginkgo.skip=@application -ginkgo.skip=@upgrade --timeout=99999s     
     - name: Store integration test results
       if: ${{ always() }}
       uses: actions/upload-artifact@v2
@@ -377,8 +377,7 @@ jobs:
     - name: Download gitops binary from s3
       run: |
         mkdir -p cmd/gitops/
-        # wget https://weave-gitops.s3.us-east-2.amazonaws.com/gitops-ubuntu-latest
-        curl -L "https://github.com/weaveworks/weave-gitops/releases/download/v0.4.1/gitops-$(uname)-$(uname -m)" -o gitops-ubuntu-latest
+        wget https://weave-gitops.s3.us-east-2.amazonaws.com/gitops-ubuntu-latest
         mv gitops-ubuntu-latest $GITOPS_BIN_PATH
     - name: Change bin permissions
       run: |
