Adds missing support for add-app
- an ssh known_hosts file
- more RBAC to create and patch secrets
- configuration of CLUSTER_NAME

--- a/charts/mccp/templates/rbac/app_viewer_role.yaml
+++ b/charts/mccp/templates/rbac/app_viewer_role.yaml
@@ -26,6 +26,8 @@ rules:
       - get
       - list
       - watch
+      - patch
+      - create
   - apiGroups:
       - wego.weave.works
     resources:
