Change ingress object from api extensions/v1beta1 to networking.k8s.io/v1 for the ui.
This assumes a kubernetes version equal or higher than 1.19-0.

Signed-off-by: Soule BA <soule@weave.works>

--- a/ui/chart/wkp-ui/templates/ingress.yaml
+++ b/ui/chart/wkp-ui/templates/ingress.yaml
@@ -2,7 +2,7 @@
 {{- $serviceName := .Values.service.name -}}
 {{- $servicePort := .Values.service.port -}}
 {{- $ingressPath := .Values.ingress.path -}}
-apiVersion: extensions/v1beta1
+apiVersion: {{ include "common.capabilities.ingress.apiVersion" . }}
 kind: Ingress
 metadata:
   name: {{ include "wkp-ui.fullname" . }}
@@ -31,9 +31,8 @@ spec:
   - host: {{ . }}
     http:
       paths:
-      - path: {{ $ingressPath }}
-        backend:
-          serviceName: {{ $serviceName }}
-          servicePort: {{ $servicePort }}
+      - pathType: ImplementationSpecific
+        path: {{ $ingressPath }}
+        backend: {{- include "common.ingress.backend" (dict "serviceName" $serviceName "servicePort" $servicePort "context" $)  | nindent 14 }}
   {{- end }}
 {{- end }}
