Fixes known_hosts

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -267,6 +267,10 @@ jobs:
       uses: webfactory/ssh-agent@v0.5.2
       with:
         ssh-private-key: ${{ secrets.WGE_GITHUB_PRIVATE_KEY }}
+    - name: Add known_hosts
+      run: |
+        ssh-keygen -R github.com
+        ssh-keyscan github.com >> ~/.ssh/known_hosts
     - name: Configure git settings
       run: |
         git config --global user.email "test-user@weave.works"
@@ -369,6 +373,10 @@ jobs:
       uses: webfactory/ssh-agent@v0.5.2
       with:
         ssh-private-key: ${{ secrets.WGE_GITHUB_PRIVATE_KEY }}
+    - name: Add known_hosts
+      run: |
+        ssh-keygen -R github.com
+        ssh-keyscan github.com >> ~/.ssh/known_hosts
     - name: Configure git settings
       run: |
         git config --global user.email "test-user@weave.works"
