--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -150,8 +150,8 @@ jobs:
         chmod +x ./clusterctl
         sudo mv ./clusterctl /usr/local/bin/clusterctl
         clusterctl version 
-    - name: Set up ssh agent
-      uses: webfactory/ssh-agent@v0.5.2
+    - name: Set up ssh
+      uses: ./github/actions/setup-ssh
       with:
         ssh-private-key: ${{ secrets.WGE_GITHUB_PRIVATE_KEY }}
     - name: Configure git settings
