New known hosts in cluster service (#312)
In response to https://github.blog/2021-09-01-improving-git-protocol-security-github/

Github has changed their "preferred key", which `go-git` always uses. So while `git` from the cli will still work for most users (it is more flexible with its keys apparently), doing git operation in the go layer will not:
- This new key is not yet in the `ubuntu-latest` image so we add it manually if we need to run some go-git code that talks to github.com (e.g. `gitops install`)
- clusters-service basically calls `gitops add app` when you add an app through the UI so also needs the new key

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -145,6 +145,10 @@ jobs:
         key: ${{ runner.os }}-${{ env.YARN_CACHE_NAME }}-${{ hashFiles('**/yarn.lock') }}
         restore-keys: |
           ${{ runner.os }}-${{ env.YARN_CACHE_NAME }}-
+    - name: Set up ssh
+      uses: ./.github/actions/setup-ssh
+      with:
+        ssh-private-key: ${{ secrets.WGE_GITHUB_PRIVATE_KEY }}
     - name: Run integration tests
       run: |
         go version
@@ -263,8 +267,8 @@ jobs:
         chmod +x ./clusterctl
         sudo mv ./clusterctl /usr/local/bin/clusterctl
         clusterctl version 
-    - name: Set up ssh agent
-      uses: webfactory/ssh-agent@v0.5.2
+    - name: Set up ssh
+      uses: ./.github/actions/setup-ssh
       with:
         ssh-private-key: ${{ secrets.WGE_GITHUB_PRIVATE_KEY }}
     - name: Configure git settings
@@ -365,8 +369,8 @@ jobs:
         chmod +x ./clusterctl
         sudo mv ./clusterctl /usr/local/bin/clusterctl
         clusterctl version 
-    - name: Set up ssh agent
-      uses: webfactory/ssh-agent@v0.5.2
+    - name: Set up ssh
+      uses: ./.github/actions/setup-ssh
       with:
         ssh-private-key: ${{ secrets.WGE_GITHUB_PRIVATE_KEY }}
     - name: Configure git settings
