--- a/charts/mccp/templates/cluster-bootstrap-controller/deployment.yaml
+++ b/charts/mccp/templates/cluster-bootstrap-controller/deployment.yaml
@@ -32,6 +32,7 @@ spec:
         - --health-probe-bind-address=:8081
         - --metrics-bind-address=127.0.0.1:8080
         - --leader-elect
+        - "--config=controller_manager_config.yaml"
         command:
         - /manager
         image: {{ .Values.images.clusterBootstrapController }}
@@ -57,6 +58,14 @@ spec:
             memory: 20Mi
         securityContext:
           allowPrivilegeEscalation: false
+        volumeMounts:
+        - name: manager-config
+          mountPath: /controller_manager_config.yaml
+          subPath: controller_manager_config.yaml
+      volumes:
+      - name: manager-config
+        configMap:
+          name: cluster-bootstrap-controller
       securityContext:
         runAsNonRoot: true
       serviceAccountName: cluster-bootstrap-controller
