--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -32,6 +32,7 @@ jobs:
       GITHUB_ORG: ${{ secrets.WGE_GITHUB_ORG }}
       GITHUB_USER: ${{ secrets.WGE_GITHUB_USER }}
       GITHUB_PASSWORD: ${{ secrets.WGE_GITHUB_PASSWORD }}
+      TOTP_TOKEN: ${{ secrets.WGE_GITHUB_MFA_KEY }}
       DOCKER_IO_USER: ${{ secrets.WGE_DOCKER_IO_USER }} 
       DOCKER_IO_PASSWORD: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
       GITOPS_BIN_PATH: ${{ github.workspace }}/cmd/gitops/gitops-${{ matrix.os_name }}-x86_64
@@ -112,6 +113,11 @@ jobs:
         git config --global user.email "test-user@weave.works"
         git config --global user.name "test-user"
         git config --global url.ssh://git@github.com/.insteadOf https://github.com/    
+    - name: Download totp-cli from GH
+      run: |
+        wget https://github.com/yitsushi/totp-cli/releases/download/v1.1.17/totp-cli-v1.1.17-${{ matrix.os_name }}-amd64.tar.gz
+        tar -xf totp-cli-v1.1.17-${{ matrix.os_name }}-amd64.tar.gz
+        mv ./totp-cli /usr/local/bin
     - name: Download gitops binary from s3
       run: |
         mkdir -p cmd/gitops/
@@ -224,6 +230,7 @@ jobs:
       GITHUB_ORG: ${{ secrets.WGE_GITHUB_ORG }}
       GITHUB_USER: ${{ secrets.WGE_GITHUB_USER }}
       GITHUB_PASSWORD: ${{ secrets.WGE_GITHUB_PASSWORD }}
+      TOTP_TOKEN: ${{ secrets.WGE_GITHUB_MFA_KEY }}
       DOCKER_IO_USER: ${{ secrets.WGE_DOCKER_IO_USER }} 
       DOCKER_IO_PASSWORD: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
       GITOPS_BIN_PATH: ${{ github.workspace }}/cmd/gitops/gitops-${{ matrix.os_name }}-x86_64
@@ -294,6 +301,11 @@ jobs:
         git config --global user.email "test-user@weave.works"
         git config --global user.name "test-user"
         git config --global url.ssh://git@github.com/.insteadOf https://github.com/    
+    - name: Download totp-cli from GH
+      run: |
+        wget https://github.com/yitsushi/totp-cli/releases/download/v1.1.17/totp-cli-v1.1.17-${{ matrix.os_name }}-amd64.tar.gz
+        tar -xf totp-cli-v1.1.17-${{ matrix.os_name }}-amd64.tar.gz
+        mv ./totp-cli /usr/local/bin
     - name: Download gitops binary from s3
       run: |
         mkdir -p cmd/gitops/
