--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -330,6 +330,7 @@ jobs:
       GITHUB_ORG: ${{ secrets.WGE_GITHUB_ORG }}
       GITHUB_USER: ${{ secrets.WGE_GITHUB_USER }}
       GITHUB_PASSWORD: ${{ secrets.WGE_GITHUB_PASSWORD }}
+      TOTP_TOKEN: ${{ secrets.WGE_GITHUB_MFA_KEY }}
       GITOPS_BIN_PATH: ${{ github.workspace }}/cmd/gitops/gitops-linux-x86_64
       WKP_BIN_PATH: ${{ github.workspace }}/cmd/wk/wk-v2.5.0-linux-amd64
       SELENIUM_DEBUG: true
@@ -380,6 +381,11 @@ jobs:
         git config --global user.email "test-user@weave.works"
         git config --global user.name "test-user"
         git config --global url.ssh://git@github.com/.insteadOf https://github.com/
+    - name: Download totp-cli from GH
+      run: |
+        wget https://github.com/yitsushi/totp-cli/releases/download/v1.1.17/totp-cli-v1.1.17-linux-amd64.tar.gz
+        tar -xf totp-cli-v1.1.17-linux-amd64.tar.gz
+        mv ./totp-cli /usr/local/bin
     - name: Download gitops binary from s3
       run: |
         mkdir -p cmd/gitops/
