--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -117,6 +117,7 @@ jobs:
         path: bin
     - name: Change bin permissions
       run: |
+        mkdir -p cmd/gitops/
         cp bin/gitops-${{needs.build-gitops.outputs.gitsha}} ${{ env.GITOPS_BIN_PATH }}
         sudo chmod +x ${{ env.GITOPS_BIN_PATH }}
     # - name: Download gitops binary from s3
