--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -160,11 +160,11 @@ jobs:
         git config --global user.email "test-user@weave.works"
         git config --global user.name "test-user"
         git config --global url.ssh://git@github.com/.insteadOf https://github.com/    
-    - name: Download gitops binary from s3
-      run: |
-        mkdir -p cmd/gitops/
-        wget https://weave-gitops.s3.us-east-2.amazonaws.com/gitops-${{ matrix.os }}
-        mv gitops-${{ matrix.os }} $GITOPS_BIN_PATH
+    - name: Get a gitops-binary
+      uses: ./.github/actions/gitops-binary
+      with:
+        os: ${{ matrix.os }}
+        path: ${{ env.GITOPS_BIN_PATH }}
     - name: Download pctl binary from GH
       run: |
         mkdir -p cmd/pctl/
@@ -177,7 +177,6 @@ jobs:
         curl -o $WKP_BIN_PATH https://s3.amazonaws.com/weaveworks-wkp/wk-v2.5.0-${{ matrix.os_name }}-amd64  
     - name: Change bin permissions
       run: |
-        sudo chmod +x ${{ env.GITOPS_BIN_PATH }}
         sudo chmod +x ${{ env.WKP_BIN_PATH }}  
     - name: Setup selenium server
       if: ${{ runner.os == 'Linux' }}
