--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,36 +20,6 @@ jobs:
       WGE_S3_AWS_ACCESS_KEY_ID: ${{ secrets.WGE_S3_AWS_ACCESS_KEY_ID }}
       WGE_S3_AWS_SECRET_ACCESS_KEY: ${{ secrets.WGE_S3_AWS_SECRET_ACCESS_KEY }}
 
-  build-gitops:
-    runs-on: ubuntu-latest
-    outputs:
-      gitsha: ${{steps.gitsha.outputs.sha}}
-    steps:
-    - name: Install Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.16.x
-    - name: Checkout code
-      uses: actions/checkout@v2
-      with:
-        repository: weaveworks/weave-gitops
-    - name: Clean
-      run: make clean
-    - id: gitsha
-      run: |
-        gitsha=$(git rev-parse --short "$GITHUB_SHA")
-        echo "::set-output name=sha::$gitsha"
-    - name: build
-      run: |
-        git_hash=$(git rev-parse --short "$GITHUB_SHA")
-        make all BINARY_NAME=gitops-${{steps.gitsha.outputs.sha}}
-    - name: Store gitops binaries
-      uses: actions/upload-artifact@v2
-      with:
-        name: gitops-binaries
-        path: bin
-        retention-days: 1
-
   acceptance-tests:
     runs-on: ubuntu-latest
     needs: [build, build-gitops]
@@ -60,7 +30,7 @@ jobs:
       GITHUB_ORG: ${{ secrets.WGE_GITHUB_ORG }}
       GITHUB_USER: ${{ secrets.WGE_GITHUB_USER }}
       GITHUB_PASSWORD: ${{ secrets.WGE_GITHUB_PASSWORD }}
-      GITOPS_BIN_PATH: ${{ github.workspace }}/cmd/gitops/gitops-linux-x86_64
+      GITOPS_BIN_PATH: /tmp/gitops
       WKP_BIN_PATH: ${{ github.workspace }}/cmd/wk/wk-v2.5.0-linux-amd64
       SELENIUM_DEBUG: true
       ACCEPTANCE_TESTS_DATABASE_TYPE: sqlite
@@ -110,21 +80,11 @@ jobs:
         git config --global user.email "test-user@weave.works"
         git config --global user.name "test-user"
         git config --global url.ssh://git@github.com/.insteadOf https://github.com/
-    - name: Download gitops binaries
-      uses: actions/download-artifact@v2
+    - name: Get a gitops-binary
+      uses: ./.github/actions/gitops-binary
       with:
-        name: gitops-binaries
-        path: bin
-    - name: Change bin permissions
-      run: |
-        mkdir -p cmd/gitops/
-        cp bin/gitops-${{needs.build-gitops.outputs.gitsha}} ${{ env.GITOPS_BIN_PATH }}
-        sudo chmod +x ${{ env.GITOPS_BIN_PATH }}
-    # - name: Download gitops binary from s3
-    #   run: |
-    #     mkdir -p cmd/gitops/
-    #     wget https://weave-gitops.s3.us-east-2.amazonaws.com/gitops-ubuntu-latest
-    #     mv gitops-ubuntu-latest $GITOPS_BIN_PATH
+        os: ${{ matrix.os }}
+        path: ${{ env.GITOPS_BIN_PATH }}
     - name: Setup selenium server
       run: |
         wget  https://selenium-release.storage.googleapis.com/3.14/selenium-server-standalone-3.14.0.jar
