--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,7 +22,7 @@ jobs:
 
   acceptance-tests:
     runs-on: ubuntu-latest
-    needs: [build, build-gitops]
+    needs: [build]
     timeout-minutes: 90
     env:
       GO_CACHE_NAME: cache-go-modules
