--- a/.github/actions/gitops-binary/action.yaml
+++ b/.github/actions/gitops-binary/action.yaml
@@ -22,3 +22,6 @@ runs:
         curl -LO https://github.com/weaveworks/weave-gitops/releases/download/v0.5.0-rc2/gitops-linux-x86_64.tar.gz
         tar -xf gitops-linux-x86_64.tar.gz
         mv gitops ${{ inputs.path }}
+
+        # Print out Version
+        ${{ inputs.path }} version
