--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,6 +22,7 @@ jobs:
 
   acceptance-tests:
     runs-on: ubuntu-latest
+    needs: build
     timeout-minutes: 90
     env:
       GO_CACHE_NAME: cache-go-modules
@@ -97,7 +98,7 @@ jobs:
     - name: Run acceptance tests
       run: |
         cd test/acceptance/test/
-        go test -ginkgo.focus=@upgrade -ginkgo.v -v --timeout=99999s
+        go test -ginkgo.focus=@capd -ginkgo.v -v --timeout=99999s
     - name: Store acceptance test results
       if: ${{ always() }}
       uses: actions/upload-artifact@v2
