--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -322,7 +322,7 @@ jobs:
 
   acceptance-tests:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [lint, build, unit-tests, integration-tests, ui-integration-tests]
     timeout-minutes: 90
     env:
       GO_CACHE_NAME: cache-go-modules
@@ -411,7 +411,7 @@ jobs:
     - name: Run acceptance tests
       run: |
         cd test/acceptance/test/
-        go test -ginkgo.focus=@capd -ginkgo.v -v --timeout=99999s
+        go test -ginkgo.skip=@upgrade -ginkgo.skip=@smoke -ginkgo.skip=@wkp -ginkgo.skip=@gce -ginkgo.skip=@eks -ginkgo.v -v --timeout=99999s
     - name: Store acceptance test results
       if: ${{ always() }}
       uses: actions/upload-artifact@v2
