--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -122,6 +122,7 @@ jobs:
       uses: ./.github/actions/gitops-binary
       with:
         os: ${{ matrix.os }}
+        os_name: ${{ matrix.os_name }}
         path: ${{ env.GITOPS_BIN_PATH }}
     - name: Download pctl binary from GH
       run: |
@@ -308,6 +309,7 @@ jobs:
       uses: ./.github/actions/gitops-binary
       with:
         os: ${{ matrix.os }}
+        os_name: ${{ matrix.os_name }}
         path: ${{ env.GITOPS_BIN_PATH }}
     - name: Download pctl binary from GH
       run: |
