Add correct default for natsURL
- Will work without configuration if using `gitops upgrade`

--- a/charts/mccp/values.yaml
+++ b/charts/mccp/values.yaml
@@ -61,7 +61,7 @@ gitopsRepoBroker:
 
 agentTemplate:
   natsScheme: nats
-  natsURL: nats-client.wkp-mccp:4222
+  natsURL: weave-gitops-enterprise-nats-client.wego-system:4222
 
 nats:
   auth:
