configurable capi path

--- a/charts/mccp/values.yaml
+++ b/charts/mccp/values.yaml
@@ -49,6 +49,7 @@ config:
     clusters:
       namespace: default
     repositoryURL: ''
+    repositoryPath: ''
     baseBranch: main
   checkpoint:
     enabled: true
