Adds `update` permission so UI can sync apps
- Which need to `update` the `GitRepository` resource

--- a/charts/mccp/templates/rbac/app_manager_role.yaml
+++ b/charts/mccp/templates/rbac/app_manager_role.yaml
@@ -28,6 +28,8 @@ rules:
       - watch
       - patch
       - create
+      - update
+      - delete
   - apiGroups:
       - wego.weave.works
     resources:
