--- a/test/utils/data/aws_cluster_credentials.yaml
+++ b/test/utils/data/aws_cluster_credentials.yaml
@@ -11,25 +11,23 @@ metadata:
   name: "aws-test-account-creds"
   namespace: capa-system
 stringData:
- AccessKeyID: AKIAIOSFODNN7EXAMPLE
- SecretAccessKey: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
+  AccessKeyID: AKIAIOSFODNN7EXAMPLE
+  SecretAccessKey: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
 
 ---
 kind: AWSClusterStaticIdentity
-apiVersion: infrastructure.cluster.x-k8s.io/v1alpha3
+apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 metadata:
   name: "aws-test-identity"
 spec:
-  secretRef:
-    name: aws-test-account-creds
-    namespace: capa-system
+  secretRef: "aws-test-account-creds"
   allowedNamespaces:
     selector:
       matchLabels:
         cluster.x-k8s.io/ns: "capi-cluster-ns-label"
 
 ---
-apiVersion: infrastructure.cluster.x-k8s.io/v1alpha3
+apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: AWSClusterRoleIdentity
 metadata:
   name: "test-role-identity"
@@ -40,5 +38,5 @@ spec:
   roleARN: "arn:aws:iam::123456789:role/CAPARole"
   sourceIdentityRef:
     kind: AWSClusterStaticIdentity
-    name: aws-test-account
+    name: aws-test-identity
     
