--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -231,6 +231,7 @@ jobs:
       GITHUB_PASSWORD: ${{ secrets.WGE_GITHUB_PASSWORD }}
       GITOPS_BIN_PATH: /tmp/gitops
       SELENIUM_DEBUG: true
+      MANAGEMENT_CLUSTER: management-${{ github.run_id }}-${{ github.run_number}}
       ACCEPTANCE_TESTS_DATABASE_TYPE: sqlite
       WGE_ACCEPTANCE: true
       ARTEFACTS_BASE_DIR: /tmp/workspace/test/
@@ -290,7 +291,7 @@ jobs:
     - name: Setup kind management cluster
       uses: engineerd/setup-kind@v0.5.0
       with:
-        name: management-${{ github.run_id }}-${{ github.run_number}}
+        name: ${{ env.MANAGEMENT_CLUSTER }}
         version: "v0.11.0"
         image: kindest/node:v1.20.7
         config: "./test/utils/data/local-kind-config.yaml"
@@ -314,7 +315,7 @@ jobs:
       with:
         name: smoke-test-artifacts
         path: ${{ env.ARTEFACTS_BASE_DIR }}
-        retention-days: 1
+        retention-days: 5
 
   acceptance-tests:
     runs-on: ubuntu-latest
@@ -330,6 +331,7 @@ jobs:
       GITOPS_BIN_PATH: /tmp/gitops
       WKP_BIN_PATH: ${{ github.workspace }}/cmd/wk/wk-v2.5.0-linux-amd64
       SELENIUM_DEBUG: true
+      MANAGEMENT_CLUSTER: management-${{ github.run_id }}-${{ github.run_number}}
       ACCEPTANCE_TESTS_DATABASE_TYPE: sqlite
       WGE_ACCEPTANCE: true
       CONNECT_KIND_WKP_LEAF_TEST: true
@@ -399,7 +401,7 @@ jobs:
     - name: Setup kind management cluster
       uses: engineerd/setup-kind@v0.5.0
       with:
-        name: management-${{ github.run_id }}-${{ github.run_number}}
+        name: ${{ env.MANAGEMENT_CLUSTER }}
         version: "v0.11.0"
         image: kindest/node:v1.20.7
         config: "./test/utils/data/local-kind-config.yaml"
@@ -419,6 +421,6 @@ jobs:
       with:
         name: acceptance-test-artifacts
         path: ${{ env.ARTEFACTS_BASE_DIR }}
-        retention-days: 1
+        retention-days: 5
         
         
