--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -229,6 +229,7 @@ jobs:
       GITHUB_ORG: ${{ secrets.WGE_GITHUB_ORG }}
       GITHUB_USER: ${{ secrets.WGE_GITHUB_USER }}
       GITHUB_PASSWORD: ${{ secrets.WGE_GITHUB_PASSWORD }}
+      EXP_CLUSTER_RESOURCE_SET: true
       GITOPS_BIN_PATH: /tmp/gitops
       SELENIUM_DEBUG: true
       ACCEPTANCE_TESTS_DATABASE_TYPE: sqlite
@@ -327,6 +328,7 @@ jobs:
       GITHUB_USER: ${{ secrets.WGE_GITHUB_USER }}
       GITHUB_PASSWORD: ${{ secrets.WGE_GITHUB_PASSWORD }}
       TOTP_TOKEN: ${{ secrets.WGE_GITHUB_MFA_KEY }}
+      EXP_CLUSTER_RESOURCE_SET: true
       GITOPS_BIN_PATH: /tmp/gitops
       WKP_BIN_PATH: ${{ github.workspace }}/cmd/wk/wk-v2.5.0-linux-amd64
       SELENIUM_DEBUG: true
@@ -335,10 +337,6 @@ jobs:
       CONNECT_KIND_WKP_LEAF_TEST: true
       ARTEFACTS_BASE_DIR: /tmp/workspace/test/
     steps:
-    - name: "Setup dynamic env vars"
-      run: |
-        export CLUSTER_REPOSITORY=gitops-capi-template-${{ github.run_id }}-$(openssl rand -hex 8)
-        echo "CLUSTER_REPOSITORY=$CLUSTER_REPOSITORY" >> $GITHUB_ENV
     - id: go-cache-paths
       run: |
         echo "::set-output name=go-build::$(go env GOCACHE)"
@@ -408,6 +406,10 @@ jobs:
         kubectl get pods -A
     - name: Install wego enterprise components on management cluster
       run: |
+        export CLUSTER_REPOSITORY=gitops-capi-template-${{ github.run_id }}-$(openssl rand -hex 8)
+        # Set the CLUSTER_REPOSITORY as environment variable for subsequent steps
+        echo "CLUSTER_REPOSITORY=$CLUSTER_REPOSITORY" >> $GITHUB_ENV
+
         ./test/utils/scripts/wego-enterprise.sh setup ${{ github.workspace }}
     - name: Run acceptance tests
       run: |
