update flag to coo config-url

--- a/test/utils/data/capi-gitops-cluster-bootstrap-config.yaml
+++ b/test/utils/data/capi-gitops-cluster-bootstrap-config.yaml
@@ -22,7 +22,7 @@ spec:
             [
               "install",
               "--override-in-cluster",
-              "--config-repo",
+              "--config-url",
               "$(GITOPS_REPO)",
             ]
           env:
