[UI/BE] Add Gitlab support for Create/Delete Cluster (#361)
* Import RepoInputWithAuth in EE

* Import RepoInputWithAuth in EE - WIP

* WG347 Add GetConfig endpoint - WIP

* WG347 Add config to versions context

* WG347 Add GetConfig endpoint - WIP2

* WG347 Import CallbackStateContextProvider from wego core

* WG347 Import CallbackStateContextProvider from wego core - cleanup

* WG347 Import CallbackStateContextProvider from wego core - cleanup2

* WG347 OAuth Gitlab route

* WG347 Refresh provider on change history

* WG347 Update BE method and add test

* WG347 Update auth in Create Cluster and extract GitAuth Component

* WG347 Refactor Create Cluster PR

* Fixes for qs and getting callback behaving

* Update package

* WG347 Bring formData and callBackState provider at the form index level

* WG347 Prevent formData from clearing on Gitlab auth

* WG347 Update GitlabAuth in Delete Cluster - WIP

* WG347 Incorporate profiles into form data - WIP

* WG347 Incorporate profiles into form data - WIP2

* WG367 Make PR Preview Optional

* WG347 Incorporate profiles into form data - WIP3

* WG347 Remove profiles from profile data and create a new Profiles component

* WG347 Remove profiles from profile data and create a new Profiles component - updated

* WG347 Update GitlabAuth in Delete Cluster - modal stays open when callbackState is not null

* WG347 Update GitlabAuth in Delete Cluster - modal stays open when callbackState is not null - update

* WG347 More work on Profiles for Gitlab auth

* Regenerate protos

* Update package.json

* WG347 More work on Profiles for Gitlab auth - 2

* WG347 More work on Profiles for Gitlab auth - 3

* WG347 More work on Profiles for Gitlab auth - 4

* WG347 Delete branch name and cls names persist

* WG347 Credentials persist

* WG347 Update Create Cluster - GitOps

* WG347 Fix continuous loop when there are no profiles

* Comment Prev related tests

* Commen

--- a/ui-cra/package.json
+++ b/ui-cra/package.json
@@ -56,7 +56,8 @@
   },
   "resolutions": {
     "**/react": "^17.0.2",
-    "**/react-dom": "^17.0.2"
+    "**/react-dom": "^17.0.2",
+    "@weaveworks/weave-gitops/react-router-dom": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
